# accounts

./: .air.toml  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  crowdin.yml  docker-compose.yml  go.mod  go.sum  main.go  pg.Dockerfile
controllers/: accounts.go  accounts_test.go  auth.go  auth_test.go  helpers_test.go  server_keys.go  server_keys_test.go  sessions.go  sessions_test.go  user_keys.go  user_keys_test.go  verification.go  verification_test.go
datastore/: accounts.go  ake_states.go  datastore.go  jwt_keys.go  login_states.go  oprf_seeds.go  password_states.go  pending_webhook_events.go  rds.go  registration_states.go  sessions.go  totp_keys.go  twofa.go  user_keys.go  verifications.go  verifications_test.go  webauthn.go
docs/: docs.go  swagger.json  swagger.yaml
middleware/: auth.go  auth_test.go  log.go
migrations/: 11_cron.down.sql  11_cron.up.sql  20241021231751_init.down.sql  20241021231751_init.up.sql  20241025031241_opaque.down.sql  20241025031241_opaque.up.sql  20250425220000_add_totp.down.sql  20250425220000_add_totp.up.sql  20250617051955_auth_flow_change.down.sql  20250617051955_auth_flow_change.up.sql  20250627203703_account_locale.down.sql  20250627203703_account_locale.up.sql  20250905024932_user_key_service_field.down.sql  20250905024932_user_key_service_field.up.sql  20251009120000_add_user_key_serial_number.down.sql  20260610011010_cron.down.sql  (+15 more)
misc/test-client-rust/: AGENTS.md  Cargo.toml
misc/test-client-rust/assets/: webauthn.html
misc/test-client-rust/src/: main.rs  util.rs  webauthn.rs
(+92 files in other folders)
