[package]
name = "test-client-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { features = ["derive"], version = "4.5" }
opaque-ke = { features = ["argon2", "std"], version = "3.0.0", path = "../../../opaque-ke" }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
hex = "0.4"
serde_json = "1.0"
totp-rs = { version = "5.7", features = ["otpauth"] }
open = "5.3"
tiny_http = "0.12"
dialoguer = { version = "0.12", default-features = false }